--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,48 @@
 ansi2html==1.9.1
+attrs==23.2.0
 blinker==1.7.0
 certifi==2023.11.17
+cftime==1.6.3
 charset-normalizer==3.3.2
 click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
 dash==2.14.2
 dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+fiona==1.9.5
 Flask==3.0.0
+fonttools==4.47.0
+geopandas==0.14.2
+gunicorn==20.1.0
 idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 nest-asyncio==1.5.8
+netCDF4==1.6.5
 numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
 patsy==0.5.5
+pillow==10.2.0
 plotly==5.18.0
+pyparsing==3.1.1
+pyproj==3.6.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 retrying==1.3.4
 scipy==1.11.4
+shapely==2.0.2
 six==1.16.0
 statsmodels==0.14.1
 tenacity==8.2.3
@@ -34,4 +51,3 @@ tzdata==2023.3
 urllib3==2.1.0
 Werkzeug==3.0.1
 zipp==3.17.0
-gunicorn==20.1.0
