--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,65 @@
-ansi2html==1.9.1
+ansi2html @ file:///D:/bld/ansi2html_1695769282964/work
 attrs==23.2.0
-blinker==1.7.0
-certifi==2023.11.17
+blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1698890160476/work
+Brotli @ file:///D:/bld/brotli-split_1695989908365/work
+cachelib==0.9.0
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1700303426725/work/certifi
+cffi==1.16.0
 cftime==1.6.3
-charset-normalizer==3.3.2
-click==8.1.7
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
+click @ file:///D:/bld/click_1692312014553/work
 click-plugins==1.1.1
 cligj==0.7.2
-colorama==0.4.6
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
 contourpy==1.2.0
 cycler==0.12.1
-dash==2.14.2
+dash @ file:///home/conda/feedstock_root/build_artifacts/dash_1701153177924/work
 dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
-dash-html-components==2.0.0
+dash-extensions==0.0.47
+dash-html-components @ file:///home/conda/feedstock_root/build_artifacts/dash-html-components_1645162180756/work
 dash-table==5.0.0
 fiona==1.9.5
-Flask==3.0.0
+Flask @ file:///home/conda/feedstock_root/build_artifacts/flask_1696349106907/work
+Flask-Caching==2.1.0
 fonttools==4.47.0
-geopandas==0.14.2
-gunicorn==20.1.0
-idna==3.6
-importlib-metadata==7.0.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
+geopandas==0.14.1
+gevent==23.9.1
+greenlet==3.0.3
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1701026962277/work
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1703269254275/work
+itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1648147185463/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
 kiwisolver==1.4.5
-MarkupSafe==2.1.3
+MarkupSafe @ file:///D:/bld/markupsafe_1695367528298/work
 matplotlib==3.8.2
-nest-asyncio==1.5.8
+more-itertools==10.2.0
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
 netCDF4==1.6.5
-numpy==1.26.2
-packaging==23.2
-pandas==2.1.4
-patsy==0.5.5
+numpy @ file:///D:/bld/numpy_1700874645773/work/dist/numpy-1.26.2-cp310-cp310-win_amd64.whl#sha256=8cfb1ae9bf54a72d05ed128f65e82ba74a830d2e1ca1cb9956b2a805e79a383e
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
+pandas @ file:///D:/bld/pandas_1702057215983/work
+patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1701443970942/work
 pillow==10.2.0
-plotly==5.18.0
+plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1698272730927/work
+pycparser==2.21
 pyparsing==3.1.1
 pyproj==3.6.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-retrying==1.3.4
-scipy==1.11.4
+PySocks @ file:///D:/bld/pysocks_1661604991356/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1693930252784/work
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
+retrying==1.3.3
+SciPy @ file:///C:/bld/scipy-split_1700812632017/work/dist/scipy-1.11.4-cp310-cp310-win_amd64.whl#sha256=9160b072e08f92f87a3e6fce6e98a464aa6c326f2845139fa1f26af41c3c8580
 shapely==2.0.2
-six==1.16.0
-statsmodels==0.14.1
-tenacity==8.2.3
-typing_extensions==4.9.0
-tzdata==2023.3
-urllib3==2.1.0
-Werkzeug==3.0.1
-zipp==3.17.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+statsmodels @ file:///D:/bld/statsmodels_1702575495342/work
+tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1692026804430/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1702176139754/work
+tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1680081134351/work
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1699933488691/work
+Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1698235201373/work
+win-inet-pton @ file:///D:/bld/win_inet_pton_1667051142467/work
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+zope.event==5.0
+zope.interface==6.1
