--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Flask==2.3.3
 Flask-Caching==2.0.2
 fonttools==4.47.2
 geopandas==0.14.2
+gunicorn==21.2.0
 idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
